--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,42 @@
-absl-py==2.1.0
-acres==0.5.0
-annotated-types==0.7.0
-appdirs==1.4.4
-astunparse==1.6.3
-atomicwrites==1.4.0
-backcall==0.2.0
-backoff==2.2.1
-backports.weakref==1.0.post1
-bcrypt==4.3.0
-build==1.2.2.post1
-chromadb==1.0.13
-ci-info==0.3.0
-clyent==1.2.2
-coloredlogs==15.0.1
-conda-repo-cli==1.0.75
-conda-verify==3.4.2
-configobj==5.0.9
-configparser==7.2.0
-dataclasses-json==0.6.7
-docopt==0.6.2
-durationpy==0.10
-et-xmlfile==1.1.0
-etelemetry==0.3.1
-flatbuffers==24.3.25
-fonttools==4.25.0
-gast==0.5.4
-google-auth==2.40.3
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-groq==0.28.0
-grpcio==1.73.0
-h11==0.16.0
-h5py==3.11.0
-hf-xet==1.1.4
-httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.33.0
-humanfriendly==10.0
-importlib_resources==6.5.2
-inflection==0.5.1
-ipython==8.12.3
-jsonpatch==1.33
-jsonpointer==2.1
-keras==3.10.0
-kubernetes==33.1.0
-langchain==0.3.26
-langchain-community==0.3.26
-langchain-core==0.3.66
-langchain-groq==0.3.4
-langchain-text-splitters==0.3.8
-langsmith==0.4.1
-libclang==18.1.1
-looseversion==1.3.0
-marshmallow==3.26.1
-ml_dtypes==0.5.1
-mmh3==5.1.0
-munkres==1.1.4
-namex==0.0.8
-nbconvert==7.16.6
-nibabel==5.3.2
-nipype==1.10.0
-oauthlib==3.3.1
-onnxruntime==1.22.0
-openpyxl==3.0.10
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-opt-einsum==3.3.0
-optree==0.11.0
-orjson==3.10.18
-packaging==24.2
-patsy==0.5.3
-pinecone-client==6.0.0
-pinecone-plugin-interface==0.0.7
-pipreqs==0.5.0
-ply==3.11
-posthog==5.4.0
-protobuf==5.29.5
-prov==2.0.2
-puremagic==1.29
-pyasn1-modules==0.2.8
-pybase64==1.4.1
-pydantic==2.11.7
-pydantic-settings==2.10.0
-pydantic_core==2.33.2
-PyDispatcher==2.0.5
-pydot==4.0.1
-pyls-spyder==0.4.0
-PyMuPDF==1.26.1
-pyparsing==3.2.3
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-PyQt5==5.15.10
-PyQtWebEngine==5.15.6
-python-docx==1.2.0
-python-lsp-jsonrpc==1.0.0
-pyxnat==1.6.3
-rdflib==7.1.4
-requests-oauthlib==2.0.0
-rsa==4.9.1
-safetensors==0.5.3
-sentence-transformers==4.1.0
-shellingham==1.5.4
-simplejson==3.20.1
-streamlit==1.46.0
-sympy==1.14.0
-tenacity==9.1.2
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.36.0
-termcolor==2.4.0
-tf_keras==2.19.0
-tokenizers==0.21.1
-torch==2.7.1
-traits==7.0.2
-transformers==4.52.4
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-uvicorn==0.34.3
-uvloop==0.21.0
-watchfiles==1.1.0
-webencodings==0.5.1
-websockets==15.0.1
-yarg==0.1.9
-zstandard==0.23.0
+# Core dependencies
+streamlit>=1.28.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+
+# Document processing
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+unstructured>=0.12.0
+unstructured[pdf,docx]>=0.12.0
+
+# LLM providers
+openai>=1.3.0
+anthropic>=0.7.0
+groq>=0.4.0
+
+# Vector stores and embeddings
+faiss-cpu>=1.7.4
+pypdf>=3.17.0
+tiktoken>=0.5.0
+
+# Utilities
+python-dotenv>=1.0.0
+requests>=2.31.0
+numpy>=1.24.0
+pandas>=2.0.0
+tqdm>=4.66.0
+pydantic>=2.5.0
+
+# Development and testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
+
+# Optional: For better performance
+torch>=2.0.0
+transformers>=4.35.0
+accelerate>=0.24.0
